; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_runner-unix.c_platform_init.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_runner-unix.c_platform_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdout = common dso_local global i32 0, align 4
@_IONBF = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@SIGPIPE = common dso_local global i32 0, align 4
@SIG_IGN = common dso_local global i32 0, align 4
@executable_path = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"realpath\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @platform_init(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* @stdout, align 4
  %7 = load i32, i32* @_IONBF, align 4
  %8 = call i32 @setvbuf(i32 %6, i32* null, i32 %7, i32 0)
  %9 = load i32, i32* @stderr, align 4
  %10 = load i32, i32* @_IONBF, align 4
  %11 = call i32 @setvbuf(i32 %9, i32* null, i32 %10, i32 0)
  %12 = load i32, i32* @SIGPIPE, align 4
  %13 = load i32, i32* @SIG_IGN, align 4
  %14 = call i32 @signal(i32 %12, i32 %13)
  %15 = load i8**, i8*** %5, align 8
  %16 = getelementptr inbounds i8*, i8** %15, i64 0
  %17 = load i8*, i8** %16, align 8
  %18 = load i32, i32* @executable_path, align 4
  %19 = call i32* @realpath(i8* %17, i32 %18)
  %20 = icmp eq i32* %19, null
  br i1 %20, label %21, label %23

21:                                               ; preds = %2
  %22 = call i32 @perror(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %3, align 4
  br label %24

23:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %23, %21
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @setvbuf(i32, i32*, i32, i32) #1

declare dso_local i32 @signal(i32, i32) #1

declare dso_local i32* @realpath(i8*, i32) #1

declare dso_local i32 @perror(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
